# sbom-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  default_14232636880754790178_0_6715.profraw  default_14232636880754790178_0_6721.profraw  default_14232636880754790178_0_6778.profraw  default_14232636880754790178_0_6969.profraw  default_16115966057443048910_0_6778.profraw  default_16115966057443048910_0_6969.profraw  default_2667983893270871761_0_6778.profraw  default_2667983893270871761_0_6969.profraw  default_922187061703858125_0_6589.profraw  default_922187061703858125_0_6590.profraw  default_922187061703858125_0_6715.profraw  default_922187061703858125_0_6721.profraw  default_922187061703858125_0_6778.profraw  default_922187061703858125_0_6969.profraw  sbom.json
.github/workflows/: main.yml
actions/: README.md
actions/install-cargo-sbom/: README.md  action.yaml
cargo-sbom/: Cargo.toml  README.md  build.rs  default_11095076150674355531_0_6551.profraw  default_11095076150674355531_0_6960.profraw
cargo-sbom/src/: graph.rs  main.rs
cargo-sbom/src/util/: mod.rs
cargo-sbom/src/util/cyclonedx/: mod.rs
cargo-sbom/src/util/spdx/: license.rs  mod.rs
cargo-sbom/tests/: spdx-test.rs
cargo-sbom/tests/data/spdx/: Cargo.toml  main.rs
examples/cargo-binary/: Cargo.toml  sbom.cyclonedx.json  sbom.spdx.json
examples/cargo-binary/src/: main.rs
serde-cyclonedx/: Cargo.toml  README.md  build.rs  default_1325543092452849075_0_6719.profraw
serde-cyclonedx/schemas/: cyclonedx_1_5.json  cyclonedx_1_6.json
serde-cyclonedx/src/: cyclonedx.rs  lib.rs  schema.json
serde-spdx/: Cargo.toml  README.md  build.rs  default_6569330251060279711_0_6713.profraw
serde-spdx/schemas/: spdx_2_3.json  spdx_3_0_1.json
serde-spdx/src/: lib.rs  spdx.rs
serde-spdx/tests/: test_3_0_1.rs
tests/: Cargo.toml  default_16743475103313673541_0_6961.profraw  default_16743475103313673541_0_7151.profraw  examples_test.rs  spdx_3_0_1_integration_test.rs
tests/examples/cargo-binary/: Cargo.toml  README.md  sbom.cyclonedx.json  sbom.spdx.json
