[package]
name = "cargo-sbom"
version = "0.10.0"
edition = "2021"
description = "Create software bill of materials (SBOM) for Rust"
license = "MIT"
readme = "README.md"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
keywords = ["sbom", "spdx", "cyclonedx", "cli", "terminal"]
categories = ["command-line-utilities"]
homepage = "https://github.com/psastras/sbom-rs"
documentation = "https://docs.rs/cargo_sbom"
repository = "https://github.com/psastras/sbom-rs"

[dependencies]
anyhow = "1.0.98"
cargo_metadata = "0.20.0"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive", "string"] }
clap-cargo = "0.15.2"
packageurl = "0.4.0"
petgraph = "0.8.2"
semver = "1.0.23"
serde-cyclonedx = { path = "../serde-cyclonedx", version = "0.10.0" }
serde-spdx = { path = "../serde-spdx", version = "0.10.0" }
serde_json = "1.0.120"
spdx = "0.10.6"
whoami = "1.6.0"
sha1 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }

[[bin]]
name = "cargo-sbom"
path = "src/main.rs"

[build-dependencies]
built = "0.8"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4", # Lets you generate random UUIDs
]

[dev-dependencies]
duct = "1.0.0"
duct_sh = "1.0.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }"
pkg-fmt = "bin"
