[package]
name = "serde-spdx"
version = "0.10.0"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
edition = "2021"
description = "Serde serialization for SPDX files"
license = "MIT"
readme = "README.md"
keywords = ["spdx", "sbom", "serde", "serialization"]
categories = ["encoding"]
build = "build.rs"
homepage  = "https://github.com/psastras/sbom-rs"
documentation = "https://docs.rs/serde_spdx"
repository = "https://github.com/psastras/sbom-rs"

[badges]
github = { repository = "psastras/cargo-sbom" }

[features]
default = []

[dependencies]
anyhow = "1.0.100"
derive_builder = "0.20.0"
serde = "1.0.226"
serde_json = "1.0.143"
thiserror = "2.0.12"

[build-dependencies]
anyhow = "1.0.100"
prettyplease = "0.2.36"
proc-macro2 = "1.0.97"
quote = "1.0.36"
schemafy_lib = "0.6.0"
serde_json = "1.0.143"
syn = "2.0.105"
