[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "test_examples"
path = "examples_test.rs"

[dev-dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.17"
escargot = "0.5.11"
predicates = "3.1.3"
pretty_assertions = "1.4.0"
serde-cyclonedx = { path = "../serde-cyclonedx", version = "0.9.1" }
serde_json = "1.0.120"
serde-spdx = { path = "../serde-spdx", version = "0.9.1" }
