[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "test_examples"
path = "examples_test.rs"

[dev-dependencies]
anyhow = "1.0.101"
assert_cmd = "2.1.2"
escargot = "0.5.15"
predicates = "3.1.3"
pretty_assertions = "1.4.0"
serde-cyclonedx = { path = "../serde-cyclonedx", version = "0.10.0" }
serde_json = "1.0.149"
serde-spdx = { path = "../serde-spdx", version = "0.10.0" }
